css: apply height to nav-class to prevent content shift on hover.

--- a/style.css
+++ b/style.css
@@ -233,6 +233,7 @@ a, .a {
     width: 26em;
     line-height: 1.1em;
     display: inline-block;
+    height: 40px;
 }
 .nav__box {
     float: left;
